--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 assignment4/exercise1/node_modules/
 assignment4/exercise2/node_modules/
+assignment4/node_modules/
+assignment5/exercise/node_modules/
