--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ assignment4/exercise2/node_modules/
 assignment4/node_modules/
 assignment5/exercise/node_modules/
 assignment6/exercise/node_modules/
+assignment7/exercise2/node_modules/
