--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ assignment4/node_modules/
 assignment5/exercise/node_modules/
 assignment6/exercise/node_modules/
 assignment7/exercise2/node_modules/
+assignment8/exercise2/node_modules/
