--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ assignment5/exercise/node_modules/
 assignment6/exercise/node_modules/
 assignment7/exercise2/node_modules/
 assignment8/exercise2/node_modules/
+assignment11/node_modules/
